--- a/.cursorignore
+++ b/.cursorignore
@@ -11,7 +11,6 @@ documentation/static/
 documentation/test/
 documentation/versioned_docs/
 documentation/versioned_sidebars/
-examples/
 hackathon/
 patches/
 pnpm-lock.yaml
@@ -28,3 +27,4 @@ packages/**/jest.config.js
 packages/**/refine.config.js
 packages/**/tsup.config.ts
 dist/
+.cursorrules
